[gd_scene load_steps=4 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Exercise13.gd" type="Script" id=2]
[ext_resource path="res://Camera2D.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 300 )
current = true
script = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 480.0
margin_top = 278.0
margin_right = 544.0
margin_bottom = 342.0
rect_pivot_offset = Vector2( 27, 56 )
texture_normal = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 271.0
margin_top = 171.0
margin_right = 335.0
margin_bottom = 235.0
rect_pivot_offset = Vector2( 27, 56 )
texture_normal = ExtResource( 1 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 177.0
margin_top = 373.0
margin_right = 241.0
margin_bottom = 437.0
rect_pivot_offset = Vector2( 27, 56 )
texture_normal = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 790.0
margin_top = 489.0
margin_right = 854.0
margin_bottom = 553.0
rect_pivot_offset = Vector2( 27, 56 )
texture_normal = ExtResource( 1 )

[node name="TextureButton5" type="TextureButton" parent="."]
margin_left = 773.0
margin_top = 151.0
margin_right = 837.0
margin_bottom = 215.0
rect_pivot_offset = Vector2( 27, 56 )
texture_normal = ExtResource( 1 )

[connection signal="mouse_entered" from="TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_entered" from="TextureButton2" to="." method="_on_TextureButton2_mouse_entered"]
[connection signal="mouse_entered" from="TextureButton3" to="." method="_on_TextureButton3_mouse_entered"]
[connection signal="mouse_entered" from="TextureButton4" to="." method="_on_TextureButton4_mouse_entered"]
[connection signal="mouse_entered" from="TextureButton5" to="." method="_on_TextureButton5_mouse_entered"]
